<resources>
    <string name="app_name">Swedbank Ekort</string>
    <string name="app_title">Swedbank Ekort</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_person_number">Person number</string>
    <string name="error_invalid_person_number">Invalid person number</string>


    <string name="login_starting">Login starting</string>
    <string name="login_NOT_STARTED">NOT_STARTED</string>
    <string name="login_INIT_EKORT_COMPLETE">INIT_EKORT_COMPLETE</string>
    <string name="login_STARTED">STARTED</string>
    <string name="login_PORTAL_INIT_COMPLETE">PORTAL_INIT_COMPLETE</string>
    <string name="login_LOGIN_1_COMPLETE">LOGIN_1_COMPLETE</string>
    <string name="login_LOGIN_2_COMPLETE">LOGIN_2_COMPLETE</string>
    <string name="login_ERROR">ERROR</string>
    <string name="login_STARTED_POLLING">STARTED_POLLING</string>
    <string name="login_POLL_COMPLETE">POLL_COMPLETE</string>
    <string name="login_PRE_CLIENT_COMPLETE">PRE_CLIENT_COMPLETE</string>
    <string name="login_LOGIN_3_COMPLETE">LOGIN_3_COMPLETE</string>
    <string name="login_SELECT_ISSUER_STARTED">SELECT_ISSUER_STARTED</string>
    <string name="login_SELECT_ISSUER_COMPLETE">SELECT_ISSUER_COMPLETE</string>
    <string name="pick_issuer">Pick issuer/Account</string>
    <string name="entering_mock_mode">No intent with the right stuff found. Going into mock mode</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="create_card_title">Create Card</string>
    <string name="menu_item_create_card">Create card</string>
    <string name="menu_item_active_cards">Active Cards</string>
    <string name="menu_item_past_transactions">Past Transactions</string>
    <string name="past_transactions">Past Transactions</string>
    <string name="transaction_date_list_header">Date</string>
    <string name="merchant_list_header">Merchant</string>
    <string name="amount_list_header">Amount</string>
    <string name="transaction_limit_list_header">Limit</string>
    <string name="issue_date_list_header">Issue Date</string>
    <string name="maximum_amount_per_transaction">Maximum amount per transaction</string>
    <string name="maximum_total_amount_cumulative">Maximum total amount (cumulative)</string>
    <string name="months_to_be_valid_for">Months to be valid for</string>
    <string name="create_ecard">Create ECard</string>
    <string name="transaction_date">Date</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="transaction_amount">Amount</string>
    <string name="past_transactions_title">Past Transactions</string>
    <string name="pan_header">PAN</string>
    <string name="expiry_header">Expiry</string>
    <string name="cvv_header">CVV</string>
    <string name="open_amount_header">Left</string>
    <string name="limit_header">Limit</string>
    <string name="active_ecards_title">Active ECards</string>
    <string name="cc_copied_to_clipboard">Credit card number copied to clipboard</string>
    <string name="golden_coin">Golden coin</string>
</resources>
