<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_past_transactions"
            android:icon="@drawable/ic_menu_past_transactions"
            android:title="@string/menu_item_past_transactions" />
        <item
            android:id="@+id/nav_active_cards"
            android:icon="@drawable/ic_menu_active_cards"
            android:title="@string/menu_item_active_cards" />
    </group>

    <item android:title="@string/create_card_title">
        <menu>
            <item
                android:id="@+id/nav_create_card"
                android:icon="@drawable/ic_add_white"
                android:title="@string/menu_item_create_card" />
        </menu>
    </item>

</menu>
