<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:text="@string/transaction_date_list_header"
        android:singleLine="true"
        android:gravity="center" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/merchant_list_header"
        android:singleLine="true"
        android:layout_weight="20"
        android:gravity="center" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:text="@string/amount_list_header"
        android:singleLine="true"
        android:gravity="center" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/transaction_limit_list_header"
        android:singleLine="true"
        android:layout_weight="20"
        android:gravity="center" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:text="@string/issue_date_list_header"
        android:singleLine="true"
        android:gravity="center" />
</LinearLayout>